@@ -47,6 +47,7 @@ exportMethods(dbGetRowCount)
 exportMethods(dbGetRowsAffected)
 exportMethods(dbGetStatement)
 exportMethods(dbHasCompleted)
+exportMethods(dbIsValid)
 exportMethods(dbListConnections)
 exportMethods(dbListFields)
 exportMethods(dbListResults)
