@@ -1,10 +1,20 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/MySQL.R
+% Please edit documentation in R/is-valid.R
+\docType{methods}
 \name{isIdCurrent}
+\alias{dbIsValid,MySQLConnection-method}
+\alias{dbIsValid,MySQLDriver-method}
+\alias{dbIsValid,MySQLResult-method}
 \alias{isIdCurrent}
-\title{Check whether a database handle object is valid or not}
+\title{Check if a database object is valid.}
 \usage{
 isIdCurrent(obj)
+
+\S4method{dbIsValid}{MySQLDriver}(dbObj)
+
+\S4method{dbIsValid}{MySQLConnection}(dbObj)
+
+\S4method{dbIsValid}{MySQLResult}(dbObj)
 }
 \arguments{
 \item{obj}{any \code{dbObject} (e.g., \code{dbDriver}, \code{dbConnection},
@@ -15,7 +25,9 @@ a logical scalar.
 }
 \description{
 Support function that verifies that an object holding a reference to a
-foreign object is still valid for communicating with the RDBMS
+foreign object is still valid for communicating with the RDBMS.
+\code{isIdCurrent} will be deprecated in the near future; please use
+the \code{\link[DBI]{dbIsValid}()} generic instead.
 }
 \details{
 \code{dbObjects} are R/S-Plus remote references to foreign objects. This
